# Compute-Histogram-CPU

./: CMakeLists.txt  README.md  cachegrind_report.txt  function_level_cachegrind_report.txt  function_level_vector.txt  gprof.txt  mem_test_report.txt  solution.txt
hdr/: Encoders.h  Improved.h  Utility.h  catch_testcases.h  command.h  config.h  gzio.h  histogram.h
res/: an-hist.nrrd  uchar-gzip.nrrd
src/: gzio.cpp  main.cpp
